--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -96,8 +96,8 @@
     "    except ValueError:\n",
     "        return \"\"\n",
     "\n",
-    "#os.rename('movies.json', 'before.json')\n",
-    "with open('movie_partai_1.json','r', encoding='utf8')as f:\n",
+    
+    "with open('IMDB.json','r', encoding='utf8')as f:\n",
     "    movies=[Test(line) for line in f]\n",
     "print(\"run\")\n",
     "\n",
